--- a/basic/CAC.Basic.UnitTests/CAC.Basic.UnitTests.csproj
+++ b/basic/CAC.Basic.UnitTests/CAC.Basic.UnitTests.csproj
@@ -4,16 +4,17 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <IsPackable>false</IsPackable>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Hellang.Middleware.ProblemDetails" Version="5.4.0" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\CAC.Core.Application\CAC.Core.Application.csproj" />
+      <ProjectReference Include="..\..\core\CAC.Core.TestUtilities\CAC.Core.TestUtilities.csproj" />
+      <ProjectReference Include="..\CAC.Basic.Web\CAC.Basic.Web.csproj" />
     </ItemGroup>
 
 </Project>
