--- a/core/CAC.Core.Web/CAC.Core.Web.csproj
+++ b/core/CAC.Core.Web/CAC.Core.Web.csproj
@@ -13,7 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\CAC.Core.Application\CAC.Core.Application.csproj" />
+      <ProjectReference Include="..\CAC.Core.Infrastructure\CAC.Core.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
