--- a/core/CAC.Core.Infrastructure/CAC.Core.Infrastructure.csproj
+++ b/core/CAC.Core.Infrastructure/CAC.Core.Infrastructure.csproj
@@ -12,6 +12,8 @@
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
         <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
         <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="5.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="5.0.0" />
     </ItemGroup>
 
     <ItemGroup>
