--- a/.editorconfig
+++ b/.editorconfig
@@ -2,6 +2,6 @@
 dotnet_diagnostic.IDE0058.severity = error
 csharp_style_unused_value_expression_statement_preference = discard_variable
 
-[{Startup,ServiceCollectionExtensions}.cs]
+[{Program,Startup,ServiceCollectionExtensions}.cs]
 dotnet_diagnostic.IDE0058.severity = none
 
