--- a/basic/CAC.Basic.Web/Properties/launchSettings.json
+++ b/basic/CAC.Basic.Web/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "CAC.Plain.Web": {
+    "CAC.Basic.Web": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": false,
